--- a/app/my.kv
+++ b/app/my.kv
@@ -21,15 +21,25 @@ Screen:
                         left_action_items: [["menu", lambda x: nav_drawer.set_state("open")]]
                     
                     BoxLayout:
-                        orientation: 'vertical'
+                        orientation: 'horizontal'
                         size_hint_y: None
 
+
                         MDRoundFlatIconButton:
-                            multiselect: True
                             text: "Open manager"
                             icon: "folder"
-                            pos_hint: {'center_x': .5, 'center_y': .6}
+                            pos_hint: {'left': 0.3}
+                        
                             on_release: app.file_manager_open()
+                        
+                        MDRoundFlatIconButton:
+                            pos_y: "100"
+                            text: "Result"
+                            icon: "file"
+                            pos_hint: {'left': 0.6}
+                            on_release: manager.current='PageResult' 
+                            on_release: app.openPageResult()
+                          
                     
                     BoxLayout: 
                         orientation: 'vertical'
