--- a/app/my.kv
+++ b/app/my.kv
@@ -48,7 +48,7 @@ Screen:
                             MDList:
                                 id: pathUploadFileList
                     
-                    ScrollView: 
+                  
 
 
             PageAllFile:
@@ -59,26 +59,21 @@ Screen:
                     orientation: 'vertical'
 
                     MDTopAppBar:
-                        
-                        title: "Navigation Drawer"
+                       
+                        title: "Все файлы"
                         elevation: 0
                         left_action_items: [["menu", lambda x: nav_drawer.set_state("open")]]
                     
-                    BoxLayout:
-                        padding: "10px"
+                    MDBoxLayout: 
                         orientation: 'vertical'
-                        size_hint_y: None
-
-                        MDLabel: 
-                            text: "Все файлы"
-                            size_hint_y: None
-                        
-
+    
                         ScrollView:
                             MDList:
-                                id: allFileInApp
+                                id: containerAllFileList
                     
-                    ScrollView:
+
+                           
+
             
 
 
@@ -91,50 +86,17 @@ Screen:
                     size_hint: (1, 1)
 
                     MDTopAppBar:
+                        
                         title: "Result"
                         elevation: 0
                         left_action_items: [["arrow-left", lambda x: app.result_page_exit_callbak()]]
-                    
-                       
+                        right_action_items:
+                            [['export', lambda x: app.callback(x), "Экспорт в xls"]]
+                
+                
 
                     BoxLayout:
                         id: boxResult
                         orientation: "vertical"
-                        size_hint: 1, 1
-
-
-                    ScrollView:
-
-
-
-
-
-
-        MDNavigationDrawer:
-            id: nav_drawer
-
-            ContentNavigationDrawer:
-                spacing: '8dp'
-                padding: '8dp'
-                orientation: "vertical"
-                
-                MDLabel: 
-                    text: "Меню"
-                    size_hint_y: None
-
-                Button:
-                    text: "Загрузить файлы"
-                    size_hint: 0.9, 0.05
-                    on_release: manager.current='PageUploadFile'
-                
-                Button:
-                    text: "Все файлы"
-                    size_hint: 0.9, 0.05
-                    on_release: manager.current='PageAllFile'
-                
-                Button:
-                    text: "test result page"
-                    size_hint: 0.9, 0.05
-                    on_release: manager.current='PageResult' 
-                    on_release: app.openPageResult()
-                ScrollView:
+                        size_hint: 1, 0.9
+                    
