--- a/app/my.kv
+++ b/app/my.kv
@@ -16,7 +16,7 @@ Screen:
 
                     MDTopAppBar:
                         
-                        title: "Navigation Drawer"
+                        title: "Загрузить файлы"
                         elevation: 0
                         left_action_items: [["menu", lambda x: nav_drawer.set_state("open")]]
                     
@@ -26,7 +26,7 @@ Screen:
 
 
                         MDRoundFlatIconButton:
-                            text: "Open manager"
+                            text: "Выбрать файлы"
                             icon: "folder"
                             pos_hint: {'left': 0.3}
                         
@@ -34,7 +34,7 @@ Screen:
                         
                         MDRoundFlatIconButton:
                             pos_y: "100"
-                            text: "Result"
+                            text: "Результат"
                             icon: "file"
                             pos_hint: {'left': 0.6}
                             on_release: manager.current='PageResult' 
@@ -87,7 +87,7 @@ Screen:
 
                     MDTopAppBar:
                         
-                        title: "Result"
+                        title: "Результат"
                         elevation: 0
                         left_action_items: [["arrow-left", lambda x: app.result_page_exit_callbak()]]
                         right_action_items:
@@ -132,10 +132,6 @@ Screen:
                     on_release: app.openPageAllFile()
                     on_release: manager.current='PageAllFile'
                 
-                Button:
-                    text: "test result page"
-                    size_hint: 0.9, 0.05
-                    on_release: manager.current='PageResult' 
-                    on_release: app.openPageResultAfterUpload()
                 ScrollView:
+                    
                     
